--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,8 @@
 spring.application.name=spring-security-demo
 server.port=8081
 logging.level.org.springframework.security=debug
+spring.datasource.url=jdbc:mysql://localhost:3306/jbdl_70_security_demo?createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=rootroot
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=true
